--- a/home-page_dark.html
+++ b/home-page_dark.html
@@ -19,7 +19,7 @@
                     <a href="https://github.com/hcasellato" target="_blank">github</a>
                     <a href="https://www.linkedin.com/in/hcasellato" target="_blank">linkedin</a>
                     <a href="http://lattes.cnpq.br/3634248149777977" target="_blank">lattes</a>
-                    <a style="font-size: 10px;" href="home-page.html">Light_Mode</a>
+                    <a style="font-size: 10px;" href="index.html">Light_Mode</a>
                 </div>
             </div>
         </header>
